--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   font-size: 16px;
   color: #222;
-  background-color: #fff;
+  background-color: #ddd;
   text-align: center;
   line-height: 1.4em;
 }
